--- a/src/app/application/deployment-verification/deployment-verification.component.html
+++ b/src/app/application/deployment-verification/deployment-verification.component.html
@@ -89,9 +89,8 @@
             <th>Status</th>
           </tr>
           <ng-container *ngFor="let service of currentPage | filter:searchData; let i=index">
-          
-          <tr [ngClass]="{'active-service': service.serviceId === selectedServiceId}">
-            <td class="service-selection " style="padding-left: 2px !important;" (click)="getService(service)">{{service.serviceName}}</td>
+          <tr [ngClass]="{'active-service': service.serviceId == selectedServiceId}">
+            <td class="service-selection " style="padding-left: 2px !important;" (click)="onClickService(service)">{{service.serviceName}}</td>
             <td width="50" style="text-align: center;" [ngClass]= "{'text-danger':service.status === 'Fail','text-success':service.status === 'Success','text-warning':service.status === 'Review','text-muted':service.status === 'InProgress'}">{{service.finalScore >= 0 ? (service.finalScore | number: '1.0-0') : 'N/A'}}</td>
             <td width="50" style="text-align: center;"  [ngClass]= "{'text-danger':service.status === 'Fail','text-success':service.status === 'Success','text-warning':service.status === 'Review','text-muted':service.status === 'InProgress'}">{{service.status}}</td>
           </tr> 
@@ -288,15 +287,14 @@
           <div class="modal-footer">
             <button type="submit" class="btn btn-default" data-dismiss="modal" aria-label="Close">OK</button>
           </div>
-          
           <!-- /.modal-footer -->
         </div>
       </div>
     </div>
 
     <div class="page-content flex-grow-1">
-      <div class="page_title page_title_inner title_icon px-3 d-flex align-items-center">
-        <h3><img src="../../../assets/images/application-icon.png" alt="" />{{selectedApplicationName}} » {{control.value}} » {{serviceNameInfo['serviceName'] !== undefined ? serviceNameInfo['serviceName']: ''}}</h3>
+      <div class="page_title page_title_inner title_icon px-3 d-flex align-items-center"> 
+        <h3><img src="../../../assets/images/application-icon.png" alt="" />{{selectedApplicationName}} » {{control.value}} » {{serviceNameInfo['serviceName'] !== undefined ? serviceNameInfo['serviceName']: ''}} </h3>
         <div class="page_access d-flex ml-auto">
           <button class="btn btn-default" data-toggle="modal" data-target="#manualTrigger" data-backdrop="static" data-keyboard="false">Manual Trigger</button>
         </div>
@@ -552,7 +550,7 @@
                   
                 </div>
                 <div class="pt-1 ">
-                  <ul class="nav tab-lined nav-tabs logAndMetricTabs" id="myTab" role="tablist" (click)="onClickTab($event)">
+                  <ul class="nav tab-lined nav-tabs logAndMetricTabs" id="myTab" role="tablist" (click)="onClickTab($event.target.id)">
                      <li class="nav-item" *ngIf="deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'">
                       <a class="nav-link" [ngClass]="{'active': deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'}"  id="log-analysis-tab" data-toggle="tab" role="tab" aria-controls="log-analysis" aria-selected="true">Log Analysis</a>
                     </li>
@@ -571,7 +569,7 @@
                         <div *ngIf="!isShow" (click)="[sideNav.toggle(),getOverallInfo()]"><i  class="fa fa-chevron-left"></i><i  class="fa fa-chevron-left"></i></div>
                       </button>
                     </li>
-                   
+            
                   </ul>
                   
                   <div class="tab-content" id="myTabContent" (click)="onClickAnalysisSection($event)">
