--- a/src/app/application/deployment-verification/deployment-verification.component.html
+++ b/src/app/application/deployment-verification/deployment-verification.component.html
@@ -89,9 +89,8 @@
             <th>Status</th>
           </tr>
           <ng-container *ngFor="let service of currentPage | filter:searchData; let i=index">
-          
-          <tr [ngClass]="{'active-service': service.serviceId === selectedServiceId}">
-            <td class="service-selection " style="padding-left: 2px !important;" (click)="getService(service)">{{service.serviceName}}</td>
+          <tr [ngClass]="{'active-service': service.serviceId == selectedServiceId}">
+            <td class="service-selection " style="padding-left: 2px !important;" (click)="onClickService(service)">{{service.serviceName}}</td>
             <td width="50" style="text-align: center;" [ngClass]= "{'text-danger':service.status === 'Fail','text-success':service.status === 'Success','text-warning':service.status === 'Review','text-muted':service.status === 'InProgress'}">{{service.finalScore >= 0 ? (service.finalScore | number: '1.0-0') : 'N/A'}}</td>
             <td width="50" style="text-align: center;"  [ngClass]= "{'text-danger':service.status === 'Fail','text-success':service.status === 'Success','text-warning':service.status === 'Review','text-muted':service.status === 'InProgress'}">{{service.status}}</td>
           </tr> 
@@ -552,7 +551,7 @@
                   
                 </div>
                 <div class="pt-1 ">
-                  <ul class="nav tab-lined nav-tabs logAndMetricTabs" id="myTab" role="tablist" (click)="onClickTab($event)">
+                  <ul class="nav tab-lined nav-tabs logAndMetricTabs" id="myTab" role="tablist" (click)="onClickTab($event.target.id)">
                      <li class="nav-item" *ngIf="deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'">
                       <a class="nav-link" [ngClass]="{'active': deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'}"  id="log-analysis-tab" data-toggle="tab" role="tab" aria-controls="log-analysis" aria-selected="true">Log Analysis</a>
                     </li>
@@ -576,7 +575,7 @@
                         </ng-container>
                       </div>
                       <div class="tab-pane mp-4"  id="metric-analysis" role="tabpanel" aria-labelledby="metric-analysis-tab"
-                      [ngClass]="{'active': deploymentApplicationHealth['analysisType'] === 'Metrics Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics','show': deploymentApplicationHealth['analysisType'] === 'Metrics Only'}">
+                      [ngClass]="{'active': selectedTab === 'metric-analysis'}">
                         <ng-container *ngIf = "selectedTab === 'metric-analysis'">
                           <app-metric-analysis [canaryId]="control.value" [serviceId]="selectedServiceId" ></app-metric-analysis>
                         </ng-container>
