--- a/src/app/application/deployment-verification/correlation/correlation.component.less
+++ b/src/app/application/deployment-verification/correlation/correlation.component.less
@@ -2,8 +2,19 @@
 {
   position: fixed;
   bottom: 450px;
+  
+}
+.maxheightPopup
+{
+  max-height: 400px;
+  overflow-y: auto;
 }
 .buttonDiv
 {
   display: flow-root;
+}
+.padlt20
+{
+  padding-left: 10px;
+  padding-right: 10px;
 }
