--- a/src/app/application-onboarding/application/application-creation/metric-template/metric-template.component.html
+++ b/src/app/application-onboarding/application/application-creation/metric-template/metric-template.component.html
@@ -1,12 +1,12 @@
   <div class="pt-1">
-    <ul class="nav tab-lined nav-tabs {{isEditMode ? 'disabledTab':''}}" id="myTab" role="tablist" (click)="onClickTab($event.target.id)">
+    <ul class="nav tab-lined nav-tabs" id="myTab" role="tablist" (click)="onClickTab($event.target.id)">
       <li class="nav-item" >
         <a class="nav-link {{selectedTab === 'metric-apminfra' ? 'active': ''}}" id="metric-apminfra-tab" data-toggle="tab" role="tab" aria-controls="metric-apminfra" aria-selected="true">APM & INFRA</a>
       </li>
       <li class="nav-item" >
         <a class="nav-link {{selectedTab === 'metric-form' ? 'active': ''}}" id="metric-form-tab" data-toggle="tab" role="tab" aria-controls="metric-form" aria-selected="true">CUSTOM</a>
       </li>
-      <li  class="nav-item {{isEditMode ? 'active':''}}">
+      <li  class="nav-item">
         <a class="nav-link"  id="metric-editor-tab" data-toggle="tab" role="tab" aria-controls="metric-editor" aria-selected="true">Editor</a>
       </li>
      
@@ -276,7 +276,7 @@
                        <div class="col-12">
                          <div class="form-group">
                            <!-- <label>APM</label> -->
-                           <div class="custom-collapse">
+                           <div class="custom-collapse" *ngIf="this.apmcookbookForm.value.cookbooklist.length > 0">
                             <a class="btn btn-default" data-toggle="collapse" href="#apmCollapse" role="button" aria-expanded="false" aria-controls="apmCollapse">
                               <i class="fas fa-caret-right"></i> APM
                             </a>
@@ -339,7 +339,7 @@
                            </form>
                           </div>
                            
-                           <div class="custom-collapse">
+                           <div class="custom-collapse" *ngIf="this.infracookbookForm.value.cookbooklist.length > 0">
                              <a class="btn btn-default" data-toggle="collapse" href="#infraCollapse" role="button" aria-expanded="false" aria-controls="infraCollapse">
                                <i class="fas fa-caret-right"></i> INFRA
                              </a>
