--- a/src/app/application/deployment-verification/deployment-verification.component.html
+++ b/src/app/application/deployment-verification/deployment-verification.component.html
@@ -550,27 +550,32 @@
                   
                 </div>
                 <div class="pt-1 ">
-                  <ul class="nav tab-lined nav-tabs logAndMetricTabs" id="myTab" role="tablist" (click)="onClickTab($event.target.id)">
-                     <li class="nav-item" *ngIf="deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'">
-                      <a class="nav-link" [ngClass]="{'active': deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'}"  id="log-analysis-tab" data-toggle="tab" role="tab" aria-controls="log-analysis" aria-selected="true">Log Analysis</a>
-                    </li>
-                    <li *ngIf="deploymentApplicationHealth['analysisType'] === 'Metrics Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'" class="nav-item">
-                      <a class="nav-link" [ngClass]="{'active': deploymentApplicationHealth['analysisType'] === 'Metrics Only'}" id="metric-analysis-tab" data-toggle="tab" role="tab" aria-controls="metric-analysis" aria-selected="true">Metric Analysis</a>
-                    </li>
-                    <!-- <li *ngIf="deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'" class="nav-item">
-                      <a class="nav-link"  id="correlation-tab" data-toggle="tab" role="tab" aria-controls="correlation" aria-selected="true">Correlation</a>
-                    </li> -->
-                    <li class="nav-item">
-                      <a class="nav-link"  id="correlation-tab" data-toggle="tab" role="tab" aria-controls="correlation" aria-selected="true">Correlation</a>
-                    </li>
-                    <li class="nav-item ml-auto">
-                      <button class="pull-right" data-toggle="tooltip" data-placement="left" title="Overall canary run inforamtion for the selected application"  mat-button>
-                        <div *ngIf="isShow" (click)="[sideNav.toggle(),getOverallInfo()]"><i  class="fa fa-chevron-right"></i><i  class="fa fa-chevron-right"></i></div>
-                        <div *ngIf="!isShow" (click)="[sideNav.toggle(),getOverallInfo()]"><i  class="fa fa-chevron-left"></i><i  class="fa fa-chevron-left"></i></div>
-                      </button>
-                    </li>
-            
-                  </ul>
+                  <div class="row">
+                    <div class="col-sm-11 noPaddingRight">
+                      <ul class="nav tab-lined nav-tabs logAndMetricTabs" id="myTab" role="tablist" (click)="onClickTab($event.target.id)">
+                        <li class="nav-item" *ngIf="deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'">
+                          <a class="nav-link" [ngClass]="{'active': deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'}"  id="log-analysis-tab" data-toggle="tab" role="tab" aria-controls="log-analysis" aria-selected="true">Log Analysis</a>
+                        </li>
+                        <li *ngIf="deploymentApplicationHealth['analysisType'] === 'Metrics Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'" class="nav-item">
+                          <a class="nav-link" [ngClass]="{'active': deploymentApplicationHealth['analysisType'] === 'Metrics Only'}" id="metric-analysis-tab" data-toggle="tab" role="tab" aria-controls="metric-analysis" aria-selected="true">Metric Analysis</a>
+                        </li>
+                        <!-- <li *ngIf="deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'" class="nav-item">
+                          <a class="nav-link"  id="correlation-tab" data-toggle="tab" role="tab" aria-controls="correlation" aria-selected="true">Correlation</a>
+                        </li> -->
+                        <li class="nav-item">
+                          <a class="nav-link"  id="correlation-tab" data-toggle="tab" role="tab" aria-controls="correlation" aria-selected="true">Correlation</a>
+                        </li>
+                        
+                
+                      </ul>
+                </div>
+                  <div class="nav-item ml-auto padding0 col-sm-1">
+                    <button class="pull-right adjustwidth" data-toggle="tooltip" data-placement="left" title="Overall canary run inforamtion for the selected application"  mat-button>
+                      <div *ngIf="isShow" (click)="[sideNav.toggle(),getOverallInfo()]"><i  class="fa fa-chevron-right"></i><i  class="fa fa-chevron-right"></i></div>
+                      <div *ngIf="!isShow" (click)="[sideNav.toggle(),getOverallInfo()]"><i  class="fa fa-chevron-left"></i><i  class="fa fa-chevron-left"></i></div>
+                    </button>
+                  </div>
+                </div>
                   
                   <div class="tab-content" id="myTabContent" (click)="onClickAnalysisSection($event)">
                     <div class="tab-pane p-4 fade " id="log-analysis" role="tabpanel" aria-labelledby="log-analysis-tab"
