--- a/src/app/application/deployment-verification/correlation/correlationform/correlationform.component.html
+++ b/src/app/application/deployment-verification/correlation/correlationform/correlationform.component.html
@@ -5,12 +5,13 @@
     <div class="row no-gutters">
       <div class="col" style="max-width: 30%;">
         <ul class="service_list list-unstyled">
-            <li *ngFor="let serviceArray of serviceInfo; let i = index" (click)="selectService(serviceArray)" ><a [ngClass]="{'selected': serviceArray.serviceId== selectedService}">{{serviceArray.serviceName}}</a></li>
+          <li class="serviceHeading">Services</li>
+          <li *ngFor="let serviceArray of serviceInfo; let i = index" (click)="selectService(serviceArray)" ><a [ngClass]="{'selected': serviceArray.serviceId== selectedService}">{{serviceArray.serviceName}}</a></li>
         </ul>
         <!-- /.service_list -->
       </div>
       <!-- /.col -->
-      <app-correlationformdetails class="col pb-3" [data]="data" [savedCheckedData]="selectedServiceClusterData" (addLogData)=getData($event) ></app-correlationformdetails>
+      <app-correlationformdetails  class="col pb-3" [data]="data" [flag]="flag" [savedCheckedData]="selectedServiceClusterData" (addLogData)=getData($event) ></app-correlationformdetails>
       <!-- /.col -->
     </div>
     <!-- /.row -->
@@ -18,7 +19,7 @@
   </form>
 
 <div class="modal-footer">
-  <button type="submit" class="btn btn-default" data-dismiss="modal" aria-label="Close">Cancel</button>
+  <button type="submit" class="btn btn-default" data-dismiss="modal" aria-label="Close" (click)="onCancel()">Cancel</button>
   <button type="submit" class="btn  btn-primary" (click)="onSubmit()">Submit</button>
 </div>
 <!-- /.modal-footer -->
