--- a/src/app/application/deployment-verification/correlation/correlationform/correlationformdetails/correlationformdetails.component.html
+++ b/src/app/application/deployment-verification/correlation/correlationform/correlationformdetails/correlationformdetails.component.html
@@ -1,14 +1,14 @@
-<form  #selectedLogsForm="ngForm">
-    <div class="col pb-3">
+<form  #selectedLogsForm="ngForm" >
+    <div class="col pb-3" *ngIf="flag=='log'">
 
-        <ng-container ngModelGroup="Critical">
+        <ng-container ngModelGroup="Critical" >
         <div class="text-divider">
             <h4>Critical</h4>
         </div>
             <ng-container *ngFor="let group of data; let i=index">
                 <div class="custom-control custom-checkbox" *ngIf="group.topic == 'CRITICAL ERROR'">
-                    <input  type="checkbox" (change)="onCheckBoxClicked()" class="custom-control-input" id="customCheck{{i}}" name="{{group.clusterId}}"  ngModel>
-                    <!-- [ngModel]="savedCheckedData !== undefined ? savedCheckedData['Critical'][group.clusterId]:false" -->
+                    <input  type="checkbox" ng-checked="expression"  (change)="onCheckBoxClicked()" class="custom-control-input" id="customCheck{{i}}" name="{{group.clusterId}}" [ngModel]="savedCheckedData !== undefined ? savedCheckedData['Critical'][group.clusterId]:false"   ngModel>
+                     
                     <label class="custom-control-label" for="customCheck{{i}}"> {{group.description}}</label>
                 </div>
             </ng-container>
@@ -20,8 +20,8 @@
             </div>
             <ng-container *ngFor="let group of data; let j=index">
                 <div class="custom-control custom-checkbox" *ngIf="group.topic == 'ERROR'">
-                    <input #checkboxes type="checkbox" (change)="onCheckBoxClicked()" class="custom-control-input" id="customCheck{{j}}" name="{{group.clusterId}}"  ngModel>
-                    <!-- [ngModel]="savedCheckedData !== undefined ? savedCheckedData['ERROR'][group.clusterId]:false" -->
+                    <input #checkboxes type="checkbox" (change)="onCheckBoxClicked()" class="custom-control-input" id="customCheck{{j}}" name="{{group.clusterId}}" [ngModel]="savedCheckedData !== undefined ? savedCheckedData['ERROR'][group.clusterId]:false"  ngModel>
+                    <!--  -->
                     <label class="custom-control-label" for="customCheck{{j}}"> {{group.description}}</label>
                 </div>
             </ng-container>
@@ -33,12 +33,23 @@
             </div>
             <ng-container *ngFor="let group of data; let k=index">
                 <div class="custom-control custom-checkbox" *ngIf="group.topic == 'WARN'">
-                    <input #checkboxes type="checkbox" (change)="onCheckBoxClicked()" class="custom-control-input" id="customCheck{{k}}" name="{{group.clusterId}}"  ngModel>
-                    <!-- [ngModel]="savedCheckedData !== undefined ? savedCheckedData['Warn'][group.clusterId]:false" -->
+                    <input #checkboxes type="checkbox" (change)="onCheckBoxClicked()" class="custom-control-input" id="customCheck{{k}}" name="{{group.clusterId}}" [ngModel]="savedCheckedData !== undefined ? savedCheckedData['Warn'][group.clusterId]:false"  ngModel>
+                    <!--  -->
                     <label class="custom-control-label" for="customCheck{{k}}"> {{group.description}}</label>
                 </div>
             </ng-container>
         </ng-container>
 
+    </div>
+    <div class="col pb-3" *ngIf="flag=='metric'">
+        <ng-container ngModelGroup="metric">
+           <ng-container *ngFor="let group of data; let i=index">
+                <div class="custom-control custom-checkbox" >
+                    <input #checkboxes type="checkbox" (change)="onCheckBoxClicked()" class="custom-control-input" id="customCheck{{i}}" name="{{group.id}}" [ngModel]="savedCheckedData !== undefined ? savedCheckedData['metric'][group.id]:false"  ngModel>
+                    <!--  -->
+                    <label class="custom-control-label" for="customCheck{{i}}"> {{group.name}}</label>
+                </div>
+            </ng-container>
+        </ng-container>
     </div>
 </form>
