--- a/src/app/application-onboarding/data-source/data-source.component.html
+++ b/src/app/application-onboarding/data-source/data-source.component.html
@@ -112,7 +112,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title">{{editMode ? 'Update Data Source':'New Data Source'}}</h5>
-          <button type="button" class="close" data-dismiss="modal" #closeAddExpenseModal aria-label="Close">
+          <button type="button" class="close" (click)="closeForm()" data-dismiss="modal" #closeAddExpenseModal aria-label="Close">
             <i class="fa fa-times"></i>
           </button>
         </div>
